--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Viga" rel="stylesheet">
 
-    <title>Sandhika Galih</title>
+    <title>Company Name</title>
   </head>
   <body>
 
@@ -35,16 +35,14 @@
         </div>
       </div>
     </nav>
-    <!-- akhir Navbar -->
+    <!--  Navbar -->
 
-    <!-- Jumbotron -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4">Get work done <span>faster</span> <br>and <span>better</span> with us</h1>
         <a href="#" class="btn btn-info btn-lg tombol">View Our Work</a>
       </div>
     </div>
-    <!-- akhir Jumbotron -->
 
 
     <!-- container -->
@@ -87,10 +85,10 @@
           <a href="#" class="btn btn-danger tombol">Gallery</a>
         </div>
       </div>
-      <!-- akhir Workingspace -->
+      <!--  Workingspace -->
 
 
-      <!-- Testimonial -->
+      <!-- Testimonials -->
       <section class="testimonial">
         <div class="row justify-content-center">
           <div class="col-lg-8">
@@ -111,11 +109,11 @@
           </div>
         </div>
       </section>
-      <!-- akhir Testimonial -->
+      <!-- Testimonials -->
 
 
     </div>
-    <!-- akhir container -->
+    <!-- Cntainer -->
 
 
 
